# NanaTracking

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
.agents/skills/align-ntp-contracts/: SKILL.md
.agents/skills/build-personalization-adapters/: SKILL.md
.agents/skills/evaluate-tracking-models/: SKILL.md
.agents/skills/manage-training-data/: SKILL.md
.agents/skills/release-onnx-models/: SKILL.md
.agents/skills/train-pytorch-models/: SKILL.md
.github/ISSUE_TEMPLATE/: model-training.yml  training-data.yml
.github/workflows/: ci.yml
apps/nana-capture-ios/: Package.swift  README.md
apps/nana-capture-studio/: README.md
artifacts/benchmarks/: issue10-temporal-macos-m4-smoke.json  issue11-rust-ort-coreml-macos-m4-smoke.json  issue11-rust-ort-face-basic-30m-macos-m4-smoke.json  issue11-rust-ort-face-basic-macos-m4-smoke.json  issue11-rust-ort-spatial-full-macos-m4-smoke.json  issue12-expression-ablation-smoke.json  issue14-compact-frame-macos-arm64-smoke.json  issue16-capture-link-macos-m4-smoke.json  issue16-capture-store-macos-arm64-smoke.json  issue16-ios-capture-scheduling-macos-m4-smoke.json  issue7-ort-face-basic-30m-low-cpu-macos-m4-smoke.json  issue7-ort-face-basic-30m-macos-m4-smoke.json  issue7-roi-preprocess-macos-m4-smoke.json  issue8-face-basic-macos-m4-smoke.json  issue8-face-spatial-comparison-macos-m4-smoke.json  issue8-face-spatial-macos-m4-smoke.json  issue8-swift-spatial-fusion-macos-m4-smoke.json  issue9-full-set-macos-m4-smoke.json
configs/: face-basic-smoke.yaml  face-spatial-smoke.yaml  full-set-smoke.yaml  smoke.yaml
configs/data/: arkit-to-ntp-v1-smoke.json  ict-facekit-light-to-ntp-v1.json  license-registry.json  ntp-v1-label-catalog.json
configs/data/licenses/: nana-synthetic-smoke.txt
configs/evaluation/: ntp-v1-standard.json
configs/expression/: ablation-v1.json
crates/nana-capture-link/: Cargo.toml  README.md
crates/nana-capture-link/src/: lib.rs
crates/nana-capture-link/tests/: capture_link.rs
crates/nana-tracking-fusion/: Cargo.toml  README.md
crates/nana-tracking-fusion/src/: lib.rs
crates/nana-tracking-fusion/tests/: spatial.rs
crates/nana-tracking-protocol/: Cargo.toml  README.md
crates/nana-tracking-protocol/src/: capability.rs  codec.rs  compact.rs  diagnostic.rs  ffi.rs  lib.rs  revision.rs  signal.rs  stream.rs  types.rs  validate.rs
crates/nana-tracking-protocol/tests/: codec.rs  contract.rs
crates/nana-tracking-protocol/tests/vectors/: partial-descriptor-v1.hex
crates/nana-tracking-runtime-api/: Cargo.toml  README.md
crates/nana-tracking-runtime-api/examples/: verify-package.rs
crates/nana-tracking-runtime-api/src/: lib.rs
crates/nana-tracking-runtime-api/tests/: contract.rs
crates/nana-tracking-runtime-ort/: Cargo.toml  README.md
crates/nana-tracking-runtime-ort/examples/: benchmark-face-basic-stability.rs  infer-face-basic.rs  infer-spatial-full.rs
crates/nana-tracking-runtime-ort/src/: lib.rs
crates/nana-tracking-semantics/: Cargo.toml  README.md
crates/nana-tracking-semantics/src/: binding.rs  lib.rs  profiles.rs  semantic.rs
crates/nana-tracking-semantics/tests/: semantics.rs
crates/nana-tracking-semantics/tests/vectors/: semantic-golden-v1.json
crates/ntp-conformance/: Cargo.toml  README.md
crates/ntp-conformance/examples/: compact_benchmark.rs
crates/ntp-conformance/fuzz/: Cargo.toml
crates/ntp-conformance/fuzz/fuzz_targets/: decode_stream.rs
crates/ntp-conformance/src/: lib.rs  main.rs  mirror.rs  profile.rs  report.rs  validator.rs
crates/ntp-conformance/tests/: acceptance.rs  cli.rs  compact.rs  conformance.rs  golden.rs  mirror.rs  properties.rs  temporal_geometry.rs
crates/ntp-conformance/tests/support/: mod.rs
crates/ntp-conformance/tests/vectors/: compact-basic-extras-v1.json  protocol-golden-v1.hex  semantic-golden-v1.json
docs/adr/: 0001-vendor-parameters-are-adapters.md  0002-pytorch-onnx-runtime-boundary.md  0003-negotiated-compact-frames.md
docs/conformance/: ntp-v1-compatibility-matrix.md
docs/contracts/: spatial-fusion-v1.md
docs/data/: capture-archive-v1.md  collection-protocol-v1.md  dataset-contract-v1.md  evaluation-standard-v1.md  governance-v1.md
docs/migrations/: nanafaceid-disposition.md
docs/model/: face-basic-v1.md  face-spatial-v1.md  full-set-v1.md  temporal-personalization-runtime-v1.md
docs/protocol/: ntp-v1-codec.md  ntp-v1-freeze-checklist.md  ntp-v1-signal-registry.md
docs/semantics/: ntp-v1-reference.md
docs/training/: capture-consent-template.md  collection-action-script.md  dataset-strategy.md  synthetic-sequence-spec.md
examples/evaluation/: benchmark-report-template-v1.json  expression-downstream-report-template-v1.json  f-direct-report-template-v1.json  fixed-sequences-v1.json
examples/manifests/: synthetic-v1.json
examples/records/: synthetic-capture-v1.jsonl
skills/nanatracking-training-data/: SKILL.md
skills/nanatracking-training-data/agents/: openai.yaml
skills/nanatracking-training-data/references/: checklists.md  contracts.md
src/nana_tracking/: __init__.py  cli.py  config.py  contracts.py  doctor.py  reproducibility.py
src/nana_tracking/data/: __init__.py  cache.py  capture.py  executors.py  face_basic.py  full_set.py  interpreter_worker.py  journal.py  labeling.py  loaders.py  manifest.py  schema.py  strategy.py  studio.py  studio_server.py  synthetic.py
src/nana_tracking/evaluation/: __init__.py  acceptance.py  capture.py  confidence.py  evaluator.py  expression.py  failures.py  runtime.py  standard.py  temporal.py
tests/integration/: test_capture_training.py  test_face_basic_manifest.py  test_face_basic_runtime.py  test_face_spatial_runtime.py  test_full_set_runtime.py  test_smoke_pipeline.py
tests/unit/: test_acceptance.py  test_capture_pipeline.py  test_capture_studio.py  test_cli.py  test_config.py  test_data_strategy.py  test_evaluation_standard.py  test_face_basic.py  test_face_spatial.py  test_failures.py  test_full_set.py  test_manifest.py  test_personalization.py  test_python314.py  test_temporal.py  test_training.py
(+42 files in other folders)
