[workspace]
members = [
    "crates/nana-tracking-protocol",
    "crates/nana-tracking-semantics",
    "crates/ntp-conformance",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
