[package]
name = "nana-tracking-runtime-api"
version = "0.1.0"
description = "Framework-neutral model session and portable package contracts for NanaTracking"
repository = "https://github.com/sena-nana/NanaTracking"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"

[lints]
workspace = true
