[package]
name = "nana-tracking-semantics"
version = "0.1.0"
description = "Deterministic semantic derivation and declarative model binding for NTP"
repository = "https://github.com/sena-nana/NanaTracking"
documentation = "https://docs.rs/nana-tracking-semantics"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nana-tracking-protocol = { version = "0.1.0", path = "../nana-tracking-protocol" }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.149"

[lints]
workspace = true
