[package]
name = "ntp-conformance"
version = "0.1.0"
description = "NTP profile certification, stream conformance, and golden-vector validation"
repository = "https://github.com/sena-nana/NanaTracking"
documentation = "https://docs.rs/ntp-conformance"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nana-tracking-protocol = { version = "0.1.0", path = "../nana-tracking-protocol" }
nana-tracking-semantics = { version = "0.1.0", path = "../nana-tracking-semantics" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
stats_alloc = "0.1.10"

[lints]
workspace = true
