[package]
name = "ntp-conformance-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
nana-tracking-protocol = { path = "../../nana-tracking-protocol" }

[[bin]]
name = "decode_stream"
path = "fuzz_targets/decode_stream.rs"
test = false
doc = false
bench = false

[workspace]

